- PR#6841: Changing compilation unit name with -o breaks ocamldebug
- PR#6842: export Typemod.modtype_of_package
- GPR#143: fix getsockopt behaviour for boolean socket options
  (Anil Madhavapeddy and Andrew Ray)
- ocamlbuild on cygwin cannot find ocamlfind
  (user 'algoriddle')
- allow android build with pthreads support (since SDK r10c)
  (Peter Zotov)

OCaml 4.02.1:
-------------
(Changes that can break existing programs are marked with a "*")

Standard library:
* Add optional argument ?limit to Arg.align.

- PR#4099: Bug in Makefile.nt: won't stop on error
  (George Necula)
- PR#6181: Improve MSVC build
  (Chen Gang)
- PR#6207: Configure doesn't detect features correctly on Haiku
  (Jessica Hamilton)
- PR#6466: Non-exhaustive matching warning message for open types is confusing
  (Peter Zotov)
- PR#6529: fix quadratic-time algorithm in Consistbl.extract.
  (Xavier Leroy, Alain Frisch, relase-worthy report by Jacques-Pascal Deplaix)
- PR#6530: Add stack overflow handling for native code (OpenBSD i386 and amd64)
  (Cristopher Zimmermann)
- PR#6533: broken semantics of %(%) when substituted by a box
  (Benoît Vaugon, report by Boris Yakobowski)
- PR#6534: legacy support for %.10s
  (Benoît Vaugon, Gabriel Scherer, report by Nick Chapman)
- PR#6536: better documentation of flag # in format strings
  (Damien Doligez, report by Nick Chapman)
- PR#6544: Bytes and CamlinternalFormat missing from threads stdlib.cma
  (Christopher Zimmermann)
- PR#6546: -dsource omits parens for `List ((`String "A")::[]) in patterns
  (Gabriel Scherer, report by Peter Zotov)
- PR#6547: __MODULE__ aborts the compiler if the module name cannot be inferred
  (Jacques Garrigue, report by Kaustuv Chaudhuri)
- PR#6549: Debug section is sometimes not readable when using -pack
  (Hugo Heuzard, review by Gabriel Scherer)
- PR#6553: Missing command line options for ocamldoc
  (Maxence Guesdon)
- PR#6554: fix race condition when retrieving backtraces
  (Jérémie Dimino, Mark Shinwell).