@@ -57,6 +57,11 @@ val prerr_warning: t -> Warnings.t -> unit
 val echo_eof: unit -> unit
 val reset: unit -> unit
 
+val warning_printer : (t -> formatter -> Warnings.t -> unit) ref
+(** Hook for intercepting warnings. *)
+val default_warning_printer : t -> formatter -> Warnings.t -> unit
+(** Original warning printer for use in hooks. *)
+
 val highlight_locations: formatter -> t list -> bool
 
 type 'a loc = {
@@ -115,6 +120,11 @@ val register_error_of_exn: (exn -> error option) -> unit
      being located as well). *)
 
 val report_error: formatter -> error -> unit
+
+val error_reporter : (formatter -> error -> unit) ref
+(** Hook for intercepting error reports. *)
+val default_error_reporter : formatter -> error -> unit
+(** Original error reporter for use in hooks. *)
 
 val report_exception: formatter -> exn -> unit
   (* Reraise the exception if it is unknown. *)
