@@ -391,19 +391,9 @@ let nerrors = ref 0;;
 let print ppf w =
   let msg = message w in
   let num = number w in
-  let newlines = ref 0 in
-  for i = 0 to String.length msg - 1 do
-    if msg.[i] = '\n' then incr newlines;
-  done;
-  let out_functions = Format.pp_get_formatter_out_functions ppf () in
-  let countnewline x = incr newlines; out_functions.Format.out_newline x in
-  Format.pp_set_formatter_out_functions ppf
-         {out_functions with Format.out_newline = countnewline};
   Format.fprintf ppf "%d: %s" num msg;
   Format.pp_print_flush ppf ();
-  Format.pp_set_formatter_out_functions ppf out_functions;
-  if (!current).error.(num) then incr nerrors;
-  !newlines
+  if (!current).error.(num) then incr nerrors
 ;;
 
 exception Errors of int;;
